--- a/src/_includes/section.about.njk
+++ b/src/_includes/section.about.njk
@@ -6,10 +6,12 @@
         <div class="font-light text-black text-xl">
           {{ item.templateContent | safe }}
         </div>
-        <img class="my-12 max-w-full mx-auto" src="public/img/DiscoverNWPA.png" alt="AWE.SOME">
+        <img class="my-12 max-w-full mx-auto" src="img/CrawfordCounty.jpg" alt="Crawford">
+        <img class="my-12 max-w-full mx-auto" src="img/beaver.jpeg" alt="Beaver">
+        <img class="my-12 max-w-full mx-auto" src="img/presque.jpg" alt="Erie">
       </div>
       <div class="flex flex-row w-full justify-center">
-        <a class="px-10 py-2 text-gray-200 bg-purple-600 rounded-full shadow-md text-lg hover:bg-gray-800 hover:border-red" href="#features">See How it Works</a>
+        <a class="px-10 py-2 text-gray-200 bg-purple-600 rounded-full shadow-md text-lg hover:bg-gray-800 hover:border-red" href="#features">See How The Festival Works</a>
       </div>
     </div>
   {% endif %}
