--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,39 +1,6 @@
-<footer class="w-full flex flex-col sm:flex-row sm:justify-center text-lg tracking-wide px-4 sm:px-0 py-16">
-  <div class="text-center pr-0 sm:pr-8 py-4">
-    <ul class="list-none">
-      {% for item in site.social %}
-        <li>
-          <a class="text-gray-800 hover:text-purple-600 no-underline" href="{{ item.url }}" target="_blank" rel="_noopener">{{ item.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-  </div>
-  <div class="h-px sm:h-auto w-1/2 sm:w-px bg-purple-600 mx-auto sm:mx-0"></div>
-  <div class="text-center px-8 py-4">
-    <ul class="list-none">
-      <li>
-        <a class="text-gray-800 hover:text-purple-600 no-underline" href="{% if isFront %}#about{% else %}{{ site.baseURL }}/#about{% endif %}">About</a>
-      </li>
-      <li>
-        <a class="text-gray-800 hover:text-purple-600 no-underline" href="{% if isFront %}#features{% else %}{{ site.baseURL }}/#features{% endif %}">Features</a>
-      </li>
-    </ul>
-  </div>
-  <div class="h-px sm:h-auto w-1/2 sm:w-px bg-purple-600 mx-auto sm:mx-0"></div>
-  <div class="text-center pl-0 sm:pl-8 py-4">
-    <ul class="list-none">
-      <li>
-        <a class="text-gray-800 hover:text-purple-600 no-underline" href="/privacy">Privacy</a>
-      </li>
-      <li>
-        <a class="text-gray-800 hover:text-purple-600 no-underline" href="/imprint">Imprint</a>
-      </li>
-    </ul>
-  </div>
-</footer>
 <div class="w-full">
-  <span class="block text-center text-gray-800 text-sm font-light">
-    &copy; AWE.SOME
+  <span class="block text-center text-gray-800 text-xl font-light p-5">
+    &copy; TEAM 5: Ochirsaikhan, Hunter, Tyler, Gabriel
   </span>
 </div>
 <div class="">
